Fixed lightbox proportions on mobile

--- a/servicespages/queueing/queueing.css
+++ b/servicespages/queueing/queueing.css
@@ -151,6 +151,9 @@
         height: auto;
         min-height: 30vh;
     }
+    .row:first-child > p{
+        font-size: 1.15em;
+    }
 }
 
 
